tests/errors/init_state/ref_obligations/shared_ref_write.err.expected
error: at 3:5: [INIT-WriteThroughSharedRef] In function 'f', block 'entry': cannot mutate through shared reference 'r'
   |
 3 |     r.* = 1;
   |     ^^^^^^^
